gccida/c1/gen_tablejump
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_tablejump/src/insn-emit.c:14384:29: error: use of undeclared identifier 'machine_mode'
v2 = expand_simple_binop( ( machine_mode)v3, PLUS, operand0, v4, 0LL, 0, OPTAB_DIRECT); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_tablejump/src/insn-emit.c:14388:29: error: use of undeclared identifier 'machine_mode'
v2 = expand_simple_binop( ( machine_mode)v3, MINUS, pic_offset_table_rtx, operand0, 0LL, 1, OPTAB_DIRECT); 
                            ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_tablejump/src/obj/insn-emit.o] Error 1
